# RoboHarvest

./: README.md
Solidworks Assembly/cam/: camera.SLDPRT  column.SLDPRT  cover.sldprt  front cover.sldprt  raspicam.SLDASM
roboharvest/: CMakeLists.txt  package.xml  readme.txt
roboharvest/config/: control.yaml
roboharvest/launch/: debug.launch.py  display.launch.py  gazebo.launch.py  slam_toolbox.py  spawn_robot_ros2.launch.py
roboharvest/meshes/: 01.STL  12.STL  23.STL  34.STL  45.STL  56.STL  67.STL  78.STL  base.STL  front_left.STL  front_right.STL  rear_left.STL  rear_right.STL  sensor.STL  ur10.STL  walle_head.STL
roboharvest/rviz/: display_default.rviz
roboharvest/scripts/: a2b.py  a2b2c.py  car_a2b.py  color_detection.py  diff_drive.py  inv_kin.py  rc_tarzan.py  rc_ur10.py
roboharvest/urdf/: robo.urdf.xacro
roboharvest/worlds/: farm6.world  farm7.world  farm8.world  farm9.world  farm_ne_new.worldworld  farm_new1.world  farm_new2.world  tomato_farm.world
vaccum gripper/: SMC vaccum.SLDPRT
walle head/: Eye.SLDPRT  Head.SLDASM  Lens.SLDPRT  LowerNeck.SLDPRT  MirrorEye.SLDPRT  UpperNeck.SLDPRT  wall e.SLDASM
